[package]
name = "catnip"
version = "0.3.0"
edition = "2018"

[dependencies]
arrayvec = "0.7.1"
bit-iter = "0.1.3"
byteorder = "1.4.3"
bytes = "1.0.1"
crc = "1.8.1"
crossbeam-channel = "0.5.1"
custom_error = "1.9.2"
derive_more = "0.99.14"
either = "1.6.1"
eui48 = "1.1.0"
flexi_logger = { version = "0.18.0", features = ["colors"] }
float_duration = "0.3.3"
futures = "0.3.15"
futures-intrusive = { git = "https://github.com/sujayakar/futures-intrusive", rev = "13b113fdc67594bd09912d78acc8f8212127537d" }
histogram = "0.6.9"
libc = "0.2.97"
log = "0.4.14"
# mimalloc = { version = "0.1.19", default-features = false }
must-let = { git = "https://github.com/sujayakar/must-let" }
num-derive = "0.3.3"
num-traits = "0.2.14"
pin-project = "1.0.7"
rand = { version = "0.8.4", features = ["small_rng"] }
slab = "0.4.3"
unicycle = { git = "https://github.com/sujayakar/unicycle", rev = "44c0e8f62cb9355cfd35ef5309abf10a4c388b62" }
uniset = "0.2.0"
async-trait = "0.1.50"

[dev-dependencies]
criterion = "0.3.4"

[features]
threadunsafe = []
